--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
       </div>
       </section>
     </main>
-    <footer>
-      <div class="container footer-box">
+    <footer class="footer-section">
+      <div class="container footer-container">
         <div class="footer-address">
           <a href="./index.html" class="logo logo-footer">
           <span lang="en"><span class="logo-accent">Web</span>Studio</span>
@@ -389,6 +389,7 @@
           <a href="tel:+380961111111" class="address-tel" >+38 096 111 11 11</a>
           <a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a>
         </address></div>
+
         <div class="footer-social-links">
           <h3>Приєднуйтесь</h3>
           <ul class="list footer-links-list">
@@ -417,6 +418,21 @@
               </svg></a>
             </li>
           </ul>
+        </div>
+
+        <div class="newsletter">
+          <h3>Підпишіться на розсилку</h3>
+          <div class="newsletter-field">
+              <label for="newsletter"></label>
+              <input class="newsletter-input" type="email" name="mail" 
+              id="newsletter" placeholder="E-mail">
+
+              <button class="modal-btn newsletter-btn" type="submit">
+              <span class="newsletter-text"> Підписатись</span>
+              <svg class="newsletter-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg> </button>
+          </div>
         </div>
       </div>
   </footer>
@@ -477,7 +493,10 @@
         </div>
 
         <div class="form-policy">
-          <input type="checkbox" name="policy" id="policy"/>
+          <input class="check" type="checkbox" name="policy" id="policy"/>
+          <svg class="icon-check" width="16" height="15">
+            <use href="./images/sprite.svg#icon-check"></use>
+          </svg>
           <label for="policy"  class="policy">
             Погоджуюся з розсилкою та приймаю 
             <a href="" class="conditions">Умови договору</a> 
