add focus on custom checkbox

--- a/index.html
+++ b/index.html
@@ -422,10 +422,9 @@
 
         <div class="newsletter">
           <h3>Підпишіться на розсилку</h3>
-          <div class="newsletter-field">
-              <label for="newsletter"></label>
+          <div class="newsletter-field">           
               <input class="newsletter-input" type="email" name="mail" 
-              id="newsletter" placeholder="E-mail">
+               placeholder="E-mail">
 
               <button class="modal-btn newsletter-btn" type="submit">
               <span class="newsletter-text"> Підписатись</span>
@@ -476,7 +475,6 @@
         <textarea 
           class="comment"
           name="comment"
-          rows="8"
           placeholder="Введіть текст"></textarea>
           </label>
         
